tests/fixtures/invalid/min_dict_float.py
# Cannot call min() with Dict[str, int], Float
x = min({"a": 1}, 1.0)
